--- a/sample/src/main/res/layout/activity_simple.xml
+++ b/sample/src/main/res/layout/activity_simple.xml
@@ -1,5 +1,7 @@
-<uk.co.senab.photoview.PhotoView
+<uk.co.senab.photoview.PhotoDraweeView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    fresco:actualImageScaleType="fitCenter"
     android:id="@+id/iv_photo"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"/>
